--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "buildability-certifier",
+  "productName": "Buildability Certifier",
   "version": "0.0.1",
   "description": "Generates and emails certificates to users who have completed Buildability courses.",
   "main": "main.js",
@@ -8,11 +9,12 @@
   },
   "repository": "https://github.com/steven-xie/buildability-certifier",
   "keywords": [
-    "Buildability",
+    "Buildability"
   ],
   "author": "Steven Xie",
   "license": "MIT License",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "electron": "^1.6.2",
+    "electron-packager": "^8.1.0"
   }
 }
