--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "buildability-certifier",
   "productName": "Buildability Certifier",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Generates and emails certificates to users who have completed Buildability courses.",
   "main": "main.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "autocomplete": "^0.0.1",
     "electron": "^1.6.2",
     "electron-packager": "^8.1.0",
-    "electron-rebuild": "^1.6.0"
+    "electron-rebuild": "^1.6.0",
+    "electron-winstaller": "^2.6.3"
   },
   "dependencies": {
     "cloudinary": "^1.9.0",
